--- a/somos.html
+++ b/somos.html
@@ -109,31 +109,19 @@
             </div>
             <div class="row">
                 <div class="col-12 col-md-6 text-justify">
-                    <p>Bienvenidos al Colegio Anglo. Somos un colegio que surgió en agosto de 1991 como respuesta a la necesidad de una
-                    institución que proporcionara una educación bilingüe de calidad que existía en el puerto de Lázaro Cárdenas Michoacán. <br><br>
-                    Hoy, treinta años después, continuamos trabajando para brindar a nuestros alumnos un ambiente de crecimiento
-                    personal, de estudio y de excelencia académica, donde aprendan sintiéndose felices y queridos.
-                    Nuestra visión es formar alumnos y jóvenes con habilidades y conocimientos, valores y aptitudes que en la actualidad se
-                    requieren para triunfar como estudiantes, como personas y como ciudadanos. <br><br>
-                    Contamos con una amplia oferta educativa que
-                    corresponde a los niveles de educación básica como lo es Kindergarten, Primaria y Secundaria, así como el nivel de
-                    Preparatoria.
-                    Por nuestra parte, nos comprometemos a desarrollar en ellos sus habilidades de pensamiento y reflexión e inculcarles los
-                    atributos del perfil del IB, el cual es un programa internacional que facilita el aprendizaje vinculándolo a componentes
-                    genuinos del entorno que rodea al niño, construyendo significados y logrando que la comprensión tenga lugar en el
-                    contexto de la exploración de contenidos pertinentes, que lo motiven y lo lleven a la reflexión. <br><br>
+                    <p>Bienvenidos al Colegio Anglo. Somos un colegio que surgió en agosto de 1991 como respuesta a la necesidad de una institución que proporcionara una educación bilingüe de calidad, que existía en el puerto de Lázaro Cárdenas, Michoacán.<br><br>
+
+                    Hoy, treinta años después, continuamos trabajando para brindar a nuestros alumnos un ambiente de crecimiento personal, de estudio y de excelencia académica, donde aprendan sintiéndose felices y queridos. Nuestra visión es formar alumnos y jóvenes con habilidades y conocimientos, valores y aptitudes que en la actualidad se requieren para triunfar como estudiantes, como personas y como ciudadanos. <br><br>
+
+                    Contamos con una amplia oferta educativa que corresponde a los niveles de educación básica como lo es Kindergarten, Primaria y Secundaria, así como el nivel de Preparatoria. Por nuestra parte, nos comprometemos a desarrollar en ellos sus habilidades de pensamiento y reflexión e inculcarles los atributos del perfil del IB, el cual es un programa internacional que facilita el aprendizaje vinculándolo a componentes genuinos del entorno que rodea al niño, construyendo significados y logrando que la comprensión tenga lugar en el contexto de la exploración de contenidos pertinentes, que lo motiven y lo lleven a la reflexión.<br><br>
                     
-                    Somos un colegio laico, bilingüe, poseemos la certificación IB, promovemos la cultura STEAM y el cultivo de la salud física y emocional. Nos ubicamos en un campus accesible y seguro para tus hijos.
+                    Somos un colegio laico, bilingüe, poseemos la certificación IB, promovemos la cultura STEAM y el cultivo de la salud física y emocional. Nos ubicamos en un campus accesible y seguro para tus hijos.<br><br>
 
-                    <br><br>
-
-                    Deseamos que nuestros alumnos se sientan bienvenidos al Anglo y que su estancia sea increíble. Todos los que en
-                    él laboramos nos esforzamos por crear un ambiente favorable para su aprendizaje.
-                    ¡Si todos anhelamos lo mismo, trabajemos juntos y hagámoslo realidad!
+                    Deseamos que nuestros alumnos se sientan bienvenidos al Anglo y que su estancia sea increíble. Todos los que en él laboramos nos esforzamos por crear un ambiente favorable para su aprendizaje. ¡Si todos anhelamos lo mismo, trabajemos juntos y hagámoslo realidad!
                     </p>
                 </div>
-                <div class="col-12 col-md-6 text-center">
-                    <img src="images/directora.png" alt="" style="max-width:50%;">
+                <div class="col-12 col-md-6 text-center ">
+                    <img src="images/directora.png" alt="" style="max-width:60%;">
                 </div>
             </div>
             <div class="row pt-2 pb-4">
