Modelo educativo -> cambios textos

--- a/modelo.html
+++ b/modelo.html
@@ -107,7 +107,7 @@
 
             <br><br>
 
-            En cada experiencia de aprendizaje, nuestras alumnas y alumnos van incorporando a sus vidas aprendizajes significativos, atributos del perfil IB, competencias idiomáticas, cultura STEAM y estilos de vida saludable; todo esto en un ambiente estimulante, plenamente amigable y emocionalmente sano y seguro. Logrando la formación de personas íntegras, competentes y autónomas; capaces de tomar decisiones informadas, libres y responsables con sus vidas, la sociedad y el medio ambiente. 
+            En cada experiencia de aprendizaje, nuestras alumnas y alumnos van incorporando a sus vidas aprendizajes significativos, atributos del perfil IB, competencias idiomáticas, cultura STEAM y estilos de vida saludable; todo esto en un ambiente estimulante, plenamente amigable y emocionalmente sano y seguro. De esta manera logramos la formación de personas íntegras, competentes y autónomas; capaces de tomar decisiones informadas, libres y responsables con sus vidas, la sociedad y el medio ambiente.
         </p>
     </div>
 
@@ -124,9 +124,8 @@
                                 <h2>¿Qué es la Certificación IB?</h2>
                             </div>
                 <hr>
-                    <p class="text-justify">El Colegio Anglo forma parte de un grupo muy selecto de escuelas internacionales que han logrado la Certificación en el programa PEP del Bachillerato Internacional, siendo un Colegio del Mundo IB.
-                    El programa de la Escuela Primaria (PEP) facilita a nuestros alumnos el aprendizaje significativo, logrando que la comprensión tenga lugar en el contexto de la exploración de contenidos pertinentes, que  lo motiven  y lo lleven a la reflexión. Gracias a su marco transdisciplinario basado en la indagación, el PEP estimula a los alumnos a reflexionar y asumir la responsabilidad de su propio aprendizaje a medida que exploran su entorno, con el objetivo de ser ciudadanos del mundo responsables, conscientes, capaces de vivir en armonía con el mundo que los rodea.
-                        </p>
+                    <p class="text-justify">El Colegio Anglo forma parte de un grupo muy selecto de escuelas internacionales que han logrado la Certificación en el programa PEP del Bachillerato Internacional, siendo un Colegio del Mundo IB. El programa de la Escuela Primaria (PEP) facilita a nuestros alumnos el aprendizaje significativo, logrando que la comprensión tenga lugar en el contexto de la exploración de contenidos pertinentes, que lo motiven y lo lleven a la reflexión. Gracias a su marco transdisciplinario basado en la indagación, el PEP estimula a los alumnos a reflexionar y asumir la responsabilidad de su propio aprendizaje a medida que exploran su entorno, con el objetivo de ser ciudadanos del mundo responsables, conscientes, capaces de vivir en armonía con el mundo que los rodea.
+                    </p>
                 </div>
             </div>
         </div>
@@ -244,11 +243,11 @@
         <div class="row pb-5 pt-3 d-flex align-items-center">              
             <div class="col-12 col-lg-6 text-left align-self-center">
                 <div class="text-justify">
-                   <p>Amco es una metodología integral e innovadora en la educación que nos permite crear una atmósfera de aprendizaje en la que el alumno genera aprendizajes significativos mediante el enfoque natural, el estímulo de la curiosidad para investigar y descubrir, las inteligencias múltiples, el trabajo colaborativo y el uso de estrategias y recursos digitales que mejor se adapten.
+                   <p>AMCO es una metodología integral e innovadora para la adquisición del idioma inglés como segunda lengua, que nos permite crear una atmósfera educativa en la que el alumno genera aprendizajes significativos mediante el enfoque natural, el estímulo de la curiosidad para investigar y descubrir, las inteligencias múltiples, el trabajo colaborativo y el uso de estrategias y recursos digitales apropiados.
                     <br>
                     <br>
  
-                    Con base a la teoría de la Voz Generadora, trabajamos arduamente para que el alumno se exprese y comunique desarrollando las cuatro habilidades: Listening, Reading, Writing y Speaking. La enseñanza del idioma no sólo se limita a hablarlo; Amco concede a los alumnos la oportunidad de conocer a su gente, costumbres, cultura e historia de sus pueblos y de todo el mundo a través del idioma inglés.
+                    Con base en la teoría de la Voz Generadora, trabajamos eficazmente para que el alumno se exprese y comunique desarrollando las cuatro habilidades: Listening, Reading, Writing y Speaking. La enseñanza del idioma no sólo se limita a hablarlo; AMCO brinda a los alumnos la oportunidad de conocer a su gente, costumbres, cultura e historia de sus pueblos y de todo el mundo a través del idioma inglés.
                     </p>
                 </div>
                 <a href="https://www.amco.me/" target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">Ir a Amco</button></a>
@@ -270,11 +269,11 @@
         <div class="row pb-5 pt-3 d-flex align-items-center">              
             <div class="col-12 col-lg-6 text-left align-self-center">
                 <div class="text-justify">
-                   <p>La educación STEAM (Ciencia, Tecnología, Ingeniería, Artes y Matemáticas, por sus siglas en inglés) tiene como objetivo involucrar en los alumnos nociones de éstas áreas para despertar en ellos la curiosidad en temas relevantes de investigación, desarrollo y aplicación utilizando actividades, aprendizajes y a reflexionar en cómo funciona el mundo.
+                   <p>La educación STEAM (Ciencia, Tecnología, Ingeniería, Artes y Matemáticas), tiene como objetivo involucrar en los alumnos nociones de estas áreas para despertar en ellos la curiosidad en temas relevantes de investigación, desarrollo y aplicación, utilizando actividades y aprendizajes que los lleven a descubrir cómo funciona el mundo.
 
                     <br><br>
 
-                    La finalidad del modelo STEAM y el Laboratorio makersteam es proveer a los alumnos con herramientas para afrontar con éxito los retos de la era digital, aplicando sus conocimiento adquiridos en clases en Proyectos tecnológicos, científicos y de ingeniería.
+                    La finalidad del modelo STEAM y nuestro Laboratorio makersteam con actividades de robótica, diseño e impresión en 3D; es habilitar a los alumnos en el manejo de herramientas para afrontar con éxito los retos de la era digital, aplicando los conocimientos adquiridos en Proyectos tecnológicos, científicos y de ingeniería.
                     <br><br>
 
                    </p>
