--- a/prekinder.html
+++ b/prekinder.html
@@ -109,10 +109,11 @@
                         <h5 class="font-weight-normal">Los primeros pasos de una persona marcan un buen futuro.</h5>
                     </div>
                     <div class="text-justify">
-                        <p>En esta etapa los niños descubren nuevas habilidades, conocen más acerca del mundo; es por eso que PreKinder es un sistema 
-                        diseñado para niños menores de 3 años que busca impulsar habilidades tempranas mediante la indagación. </p>
-                        
-                        <p> Fortalecer el autoestima 
+                        <p>En esta etapa los niños descubren nuevas habilidades y conocen más acerca de su entorno. Nuestro PreKinder es un sistema diseñado para niños menores de 3 años, promueve en ellos habilidades tempranas mediante la indagación y el juego.
+                        Los niños a través de la socialización con sus compañeros fortalecen su autoestima, van adquiriendo valores, hábitos y conocimientos apropiados para su desarrollo integral. 
+
+                        <br> <br>
+                        Fortalecer el autoestima 
                         desde pequeños es parte esencial para formar niños seguros de sí mismos y con valentía para enfrentar los retos diarios. Los niños están 
                         inmersos en nuevas relaciones personales y a través de valores y hábitos fomentamos conocimientos para un mundo 
                         globalizado.</p>
@@ -128,8 +129,7 @@
 <hr>
     <div class="container pb-4 my-5">
             <h2 class="h1-responsive font-weight-bold mt-5 text-center">Explorando el mundo para un futuro mejor</h2>
-            <p class="page-description text-center">Nuestros alumnos de PreKinder estarán inmersos en un ambiente bilingüe y transdisciplinario 
-            que promueve la exploración y le ayudará a desarrollarse en 4 competencias principales:</p>
+            <p class="page-description text-center">Nuestros alumnos de PreKinder están inmersos en un ambiente bilingüe y transdisciplinario que promueve la exploración, desarrollando estas 4 competencias:</p>
         <div class="row my-4 text-center">
             <div class="col-12 col-md mb-4">
                     <img src="images/puzzle.svg" alt="" style="max-width:35%;"  class="mb-3">
