--- a/kindergarten.html
+++ b/kindergarten.html
@@ -111,19 +111,17 @@
                             <h2>Kindergarten</h2>
                         </div>
                         <div class="text-justify">
-                            <p>La etapa preescolar permite que los pequeños aprendan jugando, cantando, indagando, bailando, siendo niños felices 
-                            y seguros de sí mismos.</p>
-                            <p> Nuestro programa bilingüe impulsa de forma natural el aprendizaje del idioma inglés y español. Mitad del día en español y mitad del día en inglés. 
-                            A través de actividades divertidas en el Aula, Biblioteca y Sala de Música.</p>
-                            <p>A través de la actividad física y dinámicas en el aula<span id="dots">...</span><span id="more">, los alumnos desarrollan funciones mentales como son la memoria, imaginación, 
-                            atención, desarrollo del lenguaje, fortaleciendo su confianza, seguridad y autonomía.
+                            <p>La etapa preescolar permite que los pequeños aprendan jugando, cantando, indagando, bailando, siendo niños felices y seguros de sí mismos.
+                            <br> <br>
+                            Nuestro programa bilingüe impulsa de forma natural el aprendizaje del idioma inglés y español. Mitad del día en español y mitad del día en inglés, a través de actividades divertidas en el Aula, Biblioteca, Sala de Estimulación y de Música.
+                            <br> <br>
+                            A través de la actividad física y dinámicas en el aula<span id="dots">...</span><span id="more">, los alumnos desarrollan funciones mentales como son la memoria, imaginación, atención, desarrollo del lenguaje, fortaleciendo su confianza, seguridad y autonomía.
                             <br>
                             <br>
-                            Considerada una de las actividades deportivas más completas, la Natación contribuye en el desarrollo de la independencia y autoconfianza del niño, 
-                            además de ejercitar los músculos, la coordinación motora, el sistema circulatorio y respiratorio.
+                            Considerada una de las actividades deportivas más completas, la Natación contribuye en el desarrollo de la independencia y autoconfianza del niño, además de ejercitar los músculos, la coordinación motora, el sistema circulatorio y respiratorio.
                             <br>
                             <br>
-                            <small>Incorporada a la SEP (Secretaría de Educación Pública) y contamos con la certificación de Bachillerato Internacional IB en el Programa de la Escuela Primaria (PEP).</small></span>
+                            <small>Incorporado a la SEP.<br>Certificación del Bachillerato Internacional IB en el Programa de la Escuela Primaria (PEP).  </small></span>
                             </p>
                         </div>
                         <button onclick="myFunction()" id="myBtn" class="btn btn-link font-weight-bold">Leer más</button>
@@ -143,7 +141,7 @@
         <section class="text-center my-5">
                 <!-- Section heading -->
                 <div class=" my-5">
-                <h2 class="h1-responsive font-weight-bold">La enseñanza a través de la diversión</h2>
+                <h2 class="h1-responsive font-weight-bold">Aprendizaje a través de la diversión</h2>
                 <p class="page-description text-center">Todos los pequeños se divierten a través de las siguientes clases.</p>
             </div>
                 <div class="container">
