--- a/primaria.html
+++ b/primaria.html
@@ -112,18 +112,19 @@
                         <h2>Primaria</h2>
                     </div>
                     <div class="text-justify">
-                        <p>En Primaria consideramos al alumno como indagador, que aprende de forma creativa y experimental a través de las actividades y dinámicas que le permiten construir su propio significado de los conocimientos adquiridos para convertirlos en aprendizajes perdurables.</p>
-                        </p>El modelo bilingüe, mitad del día en español y mitad del día en inglés, impulsa los principios y valores que ayudan a formar seres humanos 
-                        con mentalidad internacional, fortaleciendo la lengua materna y desarrollando la habilidad de comunicación a través del idioma inglés.</p>
-                        <p>La enseñanza de las TICs y Robótica <span id="dots">...</span><span id="more">permite a los alumnos obtener herramientas que fortalecen su aprendizaje a través de la indagación,
-                            favoreciendo la adquisición de conocimientos, habilidades, ingenio y destrezas esenciales para su vida futura.
+                        <p>En Primaria consideramos al alumno como indagador, que aprende de forma creativa y experimental a través de las actividades y dinámicas que le permiten construir su propio significado de los conocimientos adquiridos para convertirlos en aprendizajes perdurables.
+                        <br> <br>    
+                        El modelo bilingüe, mitad del día en español y mitad del día en inglés, impulsa los principios y valores que ayudan a formar seres humanos con mentalidad internacional, fortaleciendo la lengua materna y desarrollando la habilidad de comunicación a través del idioma inglés.
+                        <br> <br>
+                        La enseñanza de las TICs y Robótica <span id="dots">...</span><span id="more">permite a los alumnos obtener herramientas que fortalecen su aprendizaje a través de la indagación, favoreciendo la adquisición de conocimientos, habilidades, ingenio y destrezas esenciales para su vida futura.
                         <br>
                         <br>
-                        La formación en las artes contribuye al desarrollo integral, poniendo en práctica habilidades físicas, emocionales y pensamiento creativo. 
-                        Aprendiendo a interpretar y recrear sus emociones en un entorno familiar con sentido estético.
+                        La formación en las artes contribuye al desarrollo integral, poniendo en práctica habilidades físicas, emocionales y pensamiento creativo. Aprendiendo a interpretar y recrear sus emociones en un entorno familiar con sentido estético.
                         <br>
                         <br>
-                        <small>Incorporada a la SEP (Secretaría de Educación Pública) y contamos con la certificación de Bachillerato Internacional IB en el Programa de la Escuela Primaria (PEP).</small></span> 
+                        <small>Incorporado a la SEP. <br>
+                            Certificación del Bachillerato Internacional IB en el Programa de la Escuela Primaria (PEP).
+                            </small></span> 
                     </p>
                     </div>
                     
@@ -143,7 +144,7 @@
     <section class="text-center my-3">
             <!-- Section heading -->
             <div class=" my-5">
-            <h2 class="h1-responsive font-weight-bold">La enseñanza a través de la diversión</h2>
+            <h2 class="h1-responsive font-weight-bold">Aprendizaje a través de la diversión</h2>
             <p class="page-description text-center">Todos los pequeños se divierten a través de las siguientes clases.</p>
         </div>
             <div class="container">
