--- a/secundaria.html
+++ b/secundaria.html
@@ -109,16 +109,13 @@
                     </div>
                     <div class="text-justify">
                        <p>
-                        Fortalecemos los procesos de aprendizaje en los adolescentes, fomentando su capacidad de análisis, reflexión y 
-                        creatividad, acompañándolos en el desarrollo de su identidad personal y social a fin de lograr el dominio de competencias, 
-                        conocimientos y actitudes para la vida.</p> 
-                        <p>Hacemos énfasis en la formación colaborativa, aprendizaje por competencias, basado en retos  y a través de
-                        proyectos de impacto social mediante el trabajo comunitario y el voluntariado.</p>
-                        <p>El aprendizaje de las TIC's <span id="dots">...</span><span id="more">lo promovemos a través del área de informática, trabajando con programación y manejo de bases
-                        de datos por medio de la plataforma virtual.
+                        Fortalecemos los procesos de aprendizaje en los adolescentes, fomentando su capacidad de análisis, reflexión y creatividad, acompañándolos en el desarrollo de su identidad personal y social a fin de lograr el dominio de competencias, conocimientos y actitudes para la vida.
+                        <br> <br>
+                        Hacemos énfasis en la formación colaborativa, aprendizaje por competencias, basado en retos y a través de proyectos de impacto social mediante el trabajo comunitario y el voluntariado.
                         <br><br>
-                        Secundaria destaca por su alto nivel de competitividad en disciplinas deportivas como Fútbol, Básquetbol, Atletismo; y académicas como Olimpiadas Nacionales de 
-                        Talentos de Física, Olimpiada de Matemáticas y Ortografía obteniendo preseas doradas en las justas locales, regionales, estatales y nacionales.</span></p>
+                        El aprendizaje de las TIC's <span id="dots">...</span><span id="more">lo promovemos a través del área de informática, trabajando con programación y manejo de bases de datos por medio de la plataforma virtual, Robótica y el Aula makersteam. 
+                        <br><br>
+                        Secundaria destaca por su alto nivel de competitividad en disciplinas deportivas como Fútbol, Básquetbol, Atletismo; y académicas como Olimpiadas Nacionales de Talentos de Física, Olimpiada de Matemáticas y Ortografía obteniendo preseas doradas en las competencias locales, regionales, estatales y nacionales.</span></p>
                         
                     </div>
                     <button onclick="myFunction()" id="myBtn" class="btn btn-link font-weight-bold">Leer más</button>
@@ -161,6 +158,12 @@
                     <img src="images/psychologist.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Apoyo</h5>
                     <h5 class="font-weight-bold m-0">Psicopedagógico</h5>
+                </div>
+                <!-- Grid column -->
+                <!-- Grid column -->
+                <div class="col-12 col-sm-6 col-lg my-4">
+                    <img src="images/robotica.png" alt="" style="max-width:50%;" class="mb-1">
+                    <h5 class="font-weight-bold mt-2">Robótica</h5>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
