--- a/bachillerato.html
+++ b/bachillerato.html
@@ -112,14 +112,11 @@
                             <h5 class="font-weight-normal">La etapa preuniversitaria forma parte importante para un gran futuro.</h5>
                         </div>
                     <div class="text-justify">
-                        <p>
-                        Impulsamos el desarrollo de los alumnos con base en el aprendizaje significativo, en donde los jóvenes obtienen
-                        herramientas académicas y tecnológicas para el desarrollo de las habilidades y destrezas que ayudan en su futuro
-                        personal, universitario y profesional.</p>
-                        <p>Formación colaborativa<span id="dots">...</span><span id="more">, aprendizaje por competencias, aprendizaje basado en retos y aprendizaje por proyectos así como trabajo comunitario son pilares en Bachillerato Anglo.
+                        <p>Impulsamos la experiencia educativa de los alumnos con base en el aprendizaje significativo, a través del cual los jóvenes obtienen competencias académicas y tecnológicas para el desarrollo de las habilidades, actitudes y destrezas que le permitan un futuro personal, universitario y profesional exitoso.
+                        <br> <br>    
+                        Formación colaborativa<span id="dots">...</span><span id="more">, aprendizaje por competencias, aprendizaje basado en retos y aprendizaje activo, así como trabajo comunitario, son pilares en el Bachillerato Anglo.
                         <br><br>
-                        Parte fundamental es la promoción de la conciencia ecológica, mediante acciones y experiencias formativas concretas
-                        nuestros alumnos fortalecen hábitos y conductas amigables con el medio ambiente.
+                        Parte fundamental es la promoción de la conciencia ecológica, mediante acciones y experiencias formativas concretas, nuestros alumnos fortalecen hábitos y conductas amigables con el medio ambiente.
                         <br><br>
                         Bachillerato cuenta con apoyo Psicopedagógico, Plan de Vida y Carrera y Escuela para Padres.</span></p>
                     </div>
@@ -162,6 +159,12 @@
                     <img src="images/old-school.svg" alt="" style="max-width:35%;" class="mb-3">
                     <h5 class="font-weight-bold m-1">Convenios con</h5>
                     <h5 class="font-weight-bold grey-text mb-md-0 m-0">Universidades</h5>
+                </div>
+                <!-- Grid column -->
+                <!-- Grid column -->
+                <div class="col-12 col-sm-6 col-lg my-4">
+                    <img src="images/robotica.png" alt="" style="max-width:50%;" class="mb-1">
+                    <h5 class="font-weight-bold mt-2">Robótica</h5>
                 </div>
                 <!-- Grid column -->
                 <!-- Grid column -->
