--- a/extraescolares.html
+++ b/extraescolares.html
@@ -112,7 +112,7 @@
             
             </div>
             <div class="col-12 col-lg-6 text-center">
-                <img src="images/anglokinder9.jpg" class="img-fluid rounded-sm" alt="Responsive image">
+                <img src="images/extraescolares-3.png" class="img-fluid rounded-sm" alt="Responsive image">
             </div>
         </div>
     
@@ -136,7 +136,7 @@
                 <!-- Grid column -->
                 <div class="col-md">
                     <img src="images/danza.png" alt="" style="max-width:35%;">
-                    <h5 class="font-weight-bold mt-2">Danza</h5>
+                    <h5 class="font-weight-bold mt-2">Jazz</h5>
                     </p>
                 </div>
                 <!-- Grid column -->
@@ -176,6 +176,43 @@
             <!-- Grid row -->
         </div>
     </section>
+
+    <!--galeria-->
+    <section>
+        <div class="container gallery-container pt-4 pb-5">
+            <h1 class="text-center">Extraescolares</h1>
+            <!-- <p class="page-description text-center">Momentos Anglo</p> -->
+            <div class="tz-gallery">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card mb-3">
+                            <a class="lightbox" href="images/extraescolares-1.png">
+                                <img src="images/extraescolares-1.png" alt="Park" class="card-img-top rounded-sm">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-3">
+                            <a class="lightbox" href="images/extraescolares-2.png">
+                                <img src="images/extraescolares-2.png" alt="Park" class="card-img-top rounded-sm">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card mb-3">
+                            <a class="lightbox" href="images/extraescolares-3.png">
+                                <img src="images/extraescolares-3.png" alt="Park" class="card-img-top rounded-sm">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+<!--Galeria-->
+
 
     <!--Extensiones niveles-->
     <div id="nav" class="nav pt-3" >
