--- a/bachillerato.html
+++ b/bachillerato.html
@@ -109,7 +109,7 @@
                         <h2>Bachillerato</h2>
                     </div>
                     <div>
-                            <h5 class="font-weight-normal">La etapa preuniversitaria forma parte importante para un gran futuro.</h5>
+                            <h5 class="font-weight-normal">La etapa preuniversitaria es la puerta de entrada a un gran futuro.</h5>
                         </div>
                     <div class="text-justify">
                         <p>Impulsamos la experiencia educativa de los alumnos con base en el aprendizaje significativo, a través del cual los jóvenes obtienen competencias académicas y tecnológicas para el desarrollo de las habilidades, actitudes y destrezas que le permitan un futuro personal, universitario y profesional exitoso.
