--- a/prekinder.html
+++ b/prekinder.html
@@ -110,13 +110,9 @@
                     </div>
                     <div class="text-justify">
                         <p>En esta etapa los niños descubren nuevas habilidades y conocen más acerca de su entorno. Nuestro PreKinder es un sistema diseñado para niños menores de 3 años, promueve en ellos habilidades tempranas mediante la indagación y el juego.
-                        Los niños a través de la socialización con sus compañeros fortalecen su autoestima, van adquiriendo valores, hábitos y conocimientos apropiados para su desarrollo integral. 
 
                         <br> <br>
-                        Fortalecer el autoestima 
-                        desde pequeños es parte esencial para formar niños seguros de sí mismos y con valentía para enfrentar los retos diarios. Los niños están 
-                        inmersos en nuevas relaciones personales y a través de valores y hábitos fomentamos conocimientos para un mundo 
-                        globalizado.</p>
+                        Los niños a través de la socialización con sus compañeros fortalecen su autoestima, van adquiriendo valores, hábitos y conocimientos apropiados para su desarrollo integral.</p>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6">
