Inscripciones -> tamaño imagenes

--- a/inscripciones.html
+++ b/inscripciones.html
@@ -166,22 +166,22 @@
 
     <div class="container">
         <div class="card-deck">
-            <div class="card">
-            <img class="card-img-top" src="images/SEDENA.png" alt="Card image cap">
+            <div class="card px-3">
+            <img class="card-img-top" src="images/SEDENA.png" alt="Card image cap" class=>
             </div>
-            <div class="card">
-            <img class="card-img-top" src="images/apm.png" alt="Card image cap">
+            <div class="card px-3">
+            <img class="card-img-top" src="images/apm.png" alt="Card image cap" class=>
             </div>
         </div>
     </div>
 
     <div class="container">
         <div class="card-deck">
-            <div class="card">
-            <img class="card-img-top" src="images/suterm.png" alt="Card image cap">
+            <div class="card px-3">
+            <img class="card-img-top" src="images/suterm.png" alt="Card image cap" class=>
             </div>
-            <div class="card">
-            <img class="card-img-top" src="images/agentes.png" alt="Card image cap">
+            <div class="card px-3">
+            <img class="card-img-top" src="images/agentes.png" alt="Card image cap" class=>
             </div>
         </div>
     </div>
